[gd_scene load_steps=5 format=3 uid="uid://cbqvk5xa4hipe"]

[ext_resource type="Theme" uid="uid://d3dm8tqfg7pxq" path="res://assets/theme.tres" id="1_kmuyc"]
[ext_resource type="Script" path="res://scripts/views/Settings.gd" id="2_3xeyx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbr3a"]
bg_color = Color(0.04, 0.04, 0.05, 1)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck4p4"]
bg_color = Color(0.08, 0.08, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_kmuyc")
script = ExtResource("2_3xeyx")

[node name="BodyPart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.152222
anchor_right = 1.0
anchor_bottom = 0.971111
grow_horizontal = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sbr3a")
metadata/_edit_use_anchors_ = true

[node name="Data" type="VBoxContainer" parent="BodyPart"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Settings" type="Label" parent="BodyPart/Data"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BodyPart/Data"]
layout_mode = 2

[node name="AudioContainer" type="VBoxContainer" parent="BodyPart/Data"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="BodyPart/Data/AudioContainer"]
layout_mode = 2
text = "Audio & Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="BodyPart/Data/AudioContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BodyPart/Data/AudioContainer/MainContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Value" type="HSlider" parent="BodyPart/Data/AudioContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0
tick_count = 86
ticks_on_borders = true

[node name="MusicContainer" type="HBoxContainer" parent="BodyPart/Data/AudioContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="BodyPart/Data/AudioContainer/MusicContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Value" type="HSlider" parent="BodyPart/Data/AudioContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 6.0
value = -10.0
tick_count = 86
ticks_on_borders = true

[node name="HomeButton" type="Button" parent="BodyPart/Data"]
custom_minimum_size = Vector2(600, 25)
layout_mode = 2
size_flags_horizontal = 4
text = "Home"

[node name="TitlePart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.152222
grow_horizontal = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ck4p4")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TitlePart"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 75
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BottomPart" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.968889
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ck4p4")
metadata/_edit_use_anchors_ = true

[node name="CreatorLabel" type="Label" parent="BottomPart"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "    Created by : Damaged Engineer Interactive"
vertical_alignment = 1

[node name="VersionLabel" type="Label" parent="BottomPart"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Version : 2.0.0 ( Beta )    "
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="value_changed" from="BodyPart/Data/AudioContainer/MainContainer/Value" to="." method="audio_master_value_changed"]
[connection signal="value_changed" from="BodyPart/Data/AudioContainer/MusicContainer/Value" to="." method="audio_music_value_changed"]
[connection signal="pressed" from="BodyPart/Data/HomeButton" to="." method="_home_button_pressed"]
